# aventine

./: .gitignore  README.md  demo.ipynb  pyproject.toml
aventine/: __init__.py  add_src.py  api.py  db.py  home.py  search.py
aventine/static/styles/: style.css
aventine/templates/: base.html  error.html  home.html  pages.html  search.html
