[project]
name = "aventine"
version = "0.0.1"
description = "Exploring objects of the Roman world through literature."
dependencies = [
    "flask", "cltk", "sentence_transformers", "beautifulsoup4", "lxml", "tqdm"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = ["pandas"]
