[project]
name = "aventine"
version = "0.0.1"
description = "Exploring objects of the Roman world through literature."
dependencies = [
    "Flask", "gunicorn", "cltk", "sentence_transformers",
    "gensim", "beautifulsoup4", "lxml", "tqdm", "gdown"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
aventine-download = "aventine.library.onboarding:download"
aventine-quickstart = "aventine.library.onboarding:quickstart"

[project.optional-dependencies]
dev = ["build", "ipykernel", "pandas"]
